--- a/install
+++ b/install
@@ -24,7 +24,7 @@ DIR=$REPLY:a;
 
 infile="$DIR/.zshenv" outfile="$HOME/.zshenv"
 printf 'Linking %s to %s\n' "$outfile" "$infile"
-if [[ $outfile:P == $infile:P ]] {
+if [[ $outfile:P == $infile ]] {
   printf '%s already linked to %s\n' "$outfile" "$infile"
 } elif [[ -e $outfile ]] {
   syserror -p "$NAME: $outfile: " EEXIST
@@ -78,8 +78,15 @@ typeset -A links=(
 for outfile infile ( ${(@kv)links} ) {
   outfile=$DIR/functions/ln/$outfile
   printf 'Linking %s to %s\n' "$outfile" "$infile"
-  /bin/rm $outfile
-  /bin/ln -s $infile $outfile
+  if [[ $outfile:P == $infile ]] {
+    printf '%s already linked to %s\n' "$outfile" "$infile"
+  } else {
+    if [[ -e $outfile ]] {
+      printf 'removing existing file at %s\n' "$infile"
+      /bin/rm $outfile
+    }
+    /bin/ln -s $infile $outfile
+  }
 }
 for infile ( $DIR/crontab/* ) {
   read -r '?Install '$infile:t' to crontab? (yes/no): '
