--- a/install
+++ b/install
@@ -1,5 +1,6 @@
 #!/bin/zsh -f
 zmodload zsh/system
+path+=( /bin )
 DIR=$ZSH_SCRIPT:a:h
 NAME=$ZSH_SCRIPT:t
 exec 3<&1 # create file descriptor to be able to redirect something to both stdout AND a file
